# mffl

./: Cargo.toml
src/: lib.rs
src/math/: matrix_enumerator.rs  mod.rs  polynomial.rs
src/matrices/: sparse_ffmatrix.rs  sparse_sparse_ffmatrix.rs
