[package]
name = "mffl"
version = "0.1.0"
edition = "2021"


[lib]
name = "mffl"

[dependencies]
fxhash = "0.2.1"
log = "0.4.22"
mhgl = { version = "*", git = "https://github.com/matthagan15/mhgl.git" }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
simple_logger = "5.0.0"
